Bug 1579108 - Change the form in login-item to grid so that the copy buttons can reliably align r=sfoster,ntim
Implementing grid layout using flex may sometimes triggers edge cases where some columns go out of alignment. In this bug, the misalignment is due to the different length value given by -moz-available when Ubuntu font is used on the page.

Differential Revision: https://phabricator.services.mozilla.com/D100395

UltraBlame original commit: 8e5172537013a7f73eea5dd7ba0bca5bd4155bce

--- a/browser/components/aboutlogins/content/components/login-item.css
+++ b/browser/components/aboutlogins/content/components/login-item.css
@@ -1,3 +1,61 @@
+/
+*
+This
+Source
+Code
+Form
+is
+subject
+to
+the
+terms
+of
+the
+Mozilla
+Public
+*
+License
+v
+.
+2
+.
+0
+.
+If
+a
+copy
+of
+the
+MPL
+was
+not
+distributed
+with
+this
+*
+file
+You
+can
+obtain
+one
+at
+http
+:
+/
+/
+mozilla
+.
+org
+/
+MPL
+/
+2
+.
+0
+/
+.
+*
+/
 :
 host
 {
@@ -64,6 +122,22 @@ color
 4a4a4f
 ;
 }
+/
+*
+Only
+overwrite
+the
+deemphasized
+text
+color
+in
+non
+-
+dark
+mode
+.
+*
+/
 media
 not
 all
@@ -394,6 +468,18 @@ parent
 !
 important
 ;
+/
+*
+override
+all
+:
+unset
+in
+the
+rule
+below
+*
+/
 }
 input
 [
@@ -450,13 +536,6 @@ inline
 -
 block
 ;
-width
-:
--
-moz
--
-available
-;
 background
 -
 color
@@ -465,6 +544,16 @@ transparent
 !
 important
 ;
+/
+*
+override
+common
+.
+inc
+.
+css
+*
+/
 text
 -
 overflow
@@ -475,7 +564,55 @@ overflow
 :
 hidden
 ;
+width
+:
+100
+%
+;
 }
+/
+*
+We
+can
+'
+t
+use
+margin
+-
+inline
+-
+start
+here
+because
+we
+force
+*
+the
+input
+to
+have
+dir
+=
+"
+ltr
+"
+so
+we
+set
+the
+margin
+manually
+*
+using
+the
+parent
+element
+'
+s
+directionality
+.
+*
+/
 .
 detail
 -
@@ -549,6 +686,17 @@ start
 :
 0
 ;
+/
+*
+Align
+the
+button
+on
+the
+start
+side
+*
+/
 }
 .
 header
@@ -680,6 +828,48 @@ width
 :
 auto
 ;
+/
+*
+See
+bug
+1627164
+:
+In
+CJK
+locales
+line
+break
+could
+happen
+in
+any
+letter
+of
+the
+button
+.
+The
+fix
+here
+is
+to
+explicitly
+specify
+flex
+property
+so
+that
+the
+button
+couldn
+'
+t
+grow
+or
+shrink
+.
+*
+/
 flex
 :
 0
@@ -752,6 +942,19 @@ start
 :
 30px
 ;
+/
+*
+8px
+on
+each
+side
+and
+14px
+for
+icon
+width
+*
+/
 }
 .
 edit
@@ -787,6 +990,19 @@ start
 :
 32px
 ;
+/
+*
+8px
+on
+each
+side
+and
+16px
+for
+icon
+width
+*
+/
 }
 input
 [
@@ -922,6 +1138,187 @@ center
 .
 detail
 -
+grid
+{
+display
+:
+grid
+;
+grid
+-
+template
+-
+columns
+:
+minmax
+(
+240px
+max
+-
+content
+)
+auto
+;
+grid
+-
+template
+-
+rows
+:
+auto
+;
+column
+-
+gap
+:
+20px
+;
+row
+-
+gap
+:
+40px
+;
+justify
+-
+content
+:
+start
+;
+}
+:
+host
+(
+[
+data
+-
+editing
+]
+)
+.
+detail
+-
+grid
+{
+grid
+-
+template
+-
+columns
+:
+auto
+;
+}
+.
+detail
+-
+grid
+>
+.
+detail
+-
+row
+:
+not
+(
+[
+hidden
+]
+)
+{
+display
+:
+contents
+;
+}
+.
+detail
+-
+grid
+>
+.
+detail
+-
+row
+>
+.
+detail
+-
+cell
+{
+grid
+-
+column
+:
+1
+;
+}
+.
+detail
+-
+grid
+>
+.
+detail
+-
+row
+>
+.
+copy
+-
+button
+{
+grid
+-
+column
+:
+2
+;
+margin
+-
+inline
+-
+start
+:
+0
+;
+/
+*
+Reset
+button
+'
+s
+margin
+so
+it
+doesn
+'
+t
+affect
+the
+overall
+grid
+'
+s
+width
+*
+/
+justify
+-
+self
+:
+start
+;
+align
+-
+self
+:
+end
+;
+}
+.
+detail
+-
 row
 {
 display
@@ -932,34 +1329,7 @@ flex
 .
 detail
 -
-row
--
-contents
-{
-display
-:
-flex
-;
-align
--
-items
-:
-end
-;
-flex
--
-basis
-:
-340px
-;
-max
--
-width
-:
-100
-%
-;
-}
+grid
 .
 detail
 -
@@ -995,6 +1365,20 @@ width
 :
 0
 ;
+/
+*
+Allow
+long
+passwords
+to
+collapse
+down
+to
+flex
+item
+width
+*
+/
 }
 .
 field
@@ -1079,14 +1463,18 @@ bottom
 :
 0
 ;
-margin
--
-inline
--
-start
-:
-20px
-;
+/
+*
+Align
+button
+at
+the
+bottom
+of
+the
+row
+*
+/
 }
 .
 copy
@@ -1151,6 +1539,14 @@ color
 !
 important
 ;
+/
+*
+override
+common
+.
+css
+*
+/
 background
 -
 color
@@ -1161,6 +1557,18 @@ opacity
 :
 1
 ;
+/
+*
+override
+common
+.
+css
+fading
+out
+disabled
+buttons
+*
+/
 }
 .
 copy
@@ -1378,6 +1786,18 @@ monospace
 !
 important
 ;
+/
+*
+override
+all
+:
+unset
+in
+the
+rule
+above
+*
+/
 }
 .
 reveal
@@ -1386,6 +1806,22 @@ password
 -
 checkbox
 {
+/
+*
+!
+important
+is
+needed
+to
+override
+common
+.
+css
+styling
+for
+checkboxes
+*
+/
 background
 -
 color
@@ -1605,6 +2041,26 @@ border
 active
 )
 ;
+/
+*
+offset
+outline
+to
+align
+with
+1px
+border
+-
+width
+set
+for
+buttons
+/
+menulists
+above
+.
+*
+/
 outline
 -
 offset
@@ -1612,6 +2068,32 @@ offset
 -
 1px
 ;
+/
+*
+Make
+outline
+-
+radius
+slightly
+bigger
+than
+the
+border
+-
+radius
+set
+above
+*
+to
+make
+the
+thicker
+outline
+corners
+look
+smooth
+*
+/
 -
 moz
 -
